support emailing and multi-config files

--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,11 @@
-## ArxivDigest- environment seting 
+## ENV KEYS REQUIRED FOR THIS REPO:
 
 
 ##################################################################################################
 # DO NOT COMMIT YOUR API KEYS OR EMAIL ADDRESS TO YOUR REPOSITORY 
 ##################################################################################################
-OPENAI_API_KEY=your_api_key # DO NOT COMMIT ANY FILE WITH THIS KEY SET
+GH_TOKEN=api_token # API TOKEN FOR GITHUB COMMITING TO THIS REPO
 
 ##  EMAIL SETTINGS
-SENDGRID_API_KEY=your_api_key # DO NOT COMMIT ANY FILE WITH THIS KEY SET
-FROM_EMAIL=your_email # DO NOT COMMIT ANY FILE WITH THIS KEY SET
-TO_EMAIL=your_email # DO NOT COMMIT ANY FILE WITH THIS KEY SET
+GMAIL_EMAIL_ADDRESS=...
+GMAIL_EMAIL_APP_PASSWORD=...
