--- a/.github/workflows/manual_pipeline.yaml
+++ b/.github/workflows/manual_pipeline.yaml
@@ -15,13 +15,15 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: Install msmtp
+      run: sudo apt-get install msmtp
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Generate Digest 
       run: |
-        python src/action.py
+        python src/action.py --config cs_config.yaml,stats_config.yaml
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     - name: Upload Artifact
@@ -45,3 +47,20 @@ jobs:
         git push https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git HEAD:master
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    - name: Configure msmtp
+      run: |
+        echo "account default" > ~/.msmtprc
+        echo "host smtp.gmail.com" >> ~/.msmtprc
+        echo "port 587" >> ~/.msmtprc
+        echo "from ${{ secrets.GMAIL_ADDRESS }}" >> ~/.msmtprc
+        echo "auth on" >> ~/.msmtprc
+        echo "user ${{ secrets.GMAIL_ADDRESS }}" >> ~/.msmtprc
+        echo "password ${{ secrets.GMAIL_APP_PASSWORD }}" >> ~/.msmtprc
+        echo "tls on" >> ~/.msmtprc
+        chmod 600 ~/.msmtprc
+    - name: Send email
+      run: |
+        SUBJECT="CI/CD Email Report"
+        TO="${{ secrets.GMAIL_ADDRESS }}"
+        BODY=$(<digest.html)
+        { echo "To: $TO"; echo "Subject: $SUBJECT"; echo "MIME-Version: 1.0"; echo "Content-Type: text/html"; echo; echo "$BODY"; } | msmtp -t $TO
