--- a/.github/workflows/manual_pipeline.yaml
+++ b/.github/workflows/manual_pipeline.yaml
@@ -51,9 +51,10 @@ jobs:
 
         # Rename the digest to have a timestamp
         timestamp=$(date +"%Y-%m-%d--%H-%M-%S")
-        cp digest.html digest_${timestamp}.html
+        mkdir digest
+        cp digest.html digest/digest_${timestamp}.html
 
-        git add digest_${timestamp}.html
+        git add digest/digest_${timestamp}.html
         git commit -m "Add digest for ${timestamp}"
         git push https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
       env:
@@ -64,7 +65,7 @@ jobs:
         ls -la
 
         timestamp=$(date +"%Y-%m-%d")
-        SUBJECT="CI/CD Email Report ${timestamp}"
+        SUBJECT="ML Papers Email Report ${timestamp}"
         TO="${{ secrets.GMAIL_ADDRESS }}"
         BODY=$(<digest.html)
         { echo "To: $TO"; echo "Subject: $SUBJECT"; echo "MIME-Version: 1.0"; echo "Content-Type: text/html"; echo; echo "$BODY"; } | msmtp -t $TO
